--- a/src/Campaigns/resources/admin/components/CampaignDetailsPage/CampaignDetailsPage.module.scss
+++ b/src/Campaigns/resources/admin/components/CampaignDetailsPage/CampaignDetailsPage.module.scss
@@ -344,7 +344,6 @@ select[name="campaignId"] {
                 input,
                 textarea,
                 select,
-                .editor,
                 .upload {
                     margin-top: var(--givewp-spacing-1);
                     color: var(--givewp-neutral-900);
@@ -383,8 +382,7 @@ select[name="campaignId"] {
             }
 
             input,
-            select,
-            textarea {
+            select {
                 font-size: 1rem;
                 line-height: 2;
                 display: block;
