--- a/src/Campaigns/Blocks/CampaignTitle/editor.scss
+++ b/src/Campaigns/Blocks/CampaignTitle/editor.scss
@@ -11,3 +11,8 @@
         }
     }
 }
+
+// Hide the default Gutenberg's post title block as we don't use that
+.edit-post-visual-editor__post-title-wrapper {
+    display: none;
+}
