refactor: remove box shadow

--- a/src/Campaigns/resources/admin/components/CampaignDetailsPage/CampaignDetailsPage.module.scss
+++ b/src/Campaigns/resources/admin/components/CampaignDetailsPage/CampaignDetailsPage.module.scss
@@ -380,6 +380,7 @@ select[name="campaignId"] {
                     input {
                         border: none;
                         outline: none;
+                        box-shadow: none;
                         padding: 0;
                         margin: 0;
                     }
