refactor: update css imports

--- a/assets/src/css/admin/buttons.scss
+++ b/assets/src/css/admin/buttons.scss
@@ -92,7 +92,7 @@
         display: inline-block;
         width: 1.5rem;
         height: 1.5rem;
-        background-image: url('../images/crown.svg');
+        background-image: url('../../images/crown.svg');
         background-repeat: no-repeat;
         background-position: center;
         background-size: contain;
