--- a/assets/src/css/admin/paypal-commerce.scss
+++ b/assets/src/css/admin/paypal-commerce.scss
@@ -59,7 +59,7 @@
 
             span.icon{
 				padding-right: 24px;
-				background-image: url(../images/admin/check-verified-icon.svg);
+				background-image: url(../../images/admin/check-verified-icon.svg);
 				background-repeat: no-repeat;
 				background-position: center;
             }
