--- a/assets/src/css/admin/paypal-donations-migration-banners.scss
+++ b/assets/src/css/admin/paypal-donations-migration-banners.scss
@@ -57,7 +57,7 @@
 
         .icon{
             vertical-align: middle;
-                    background: url(../images/admin/alert-triangle.svg) no-repeat center center;
+                    background: url(../../images/admin/alert-triangle.svg) no-repeat center center;
             padding-right: 16px;
         }
 
