--- a/src/Campaigns/resources/admin/components/FormModal/FormModal.module.scss
+++ b/src/Campaigns/resources/admin/components/FormModal/FormModal.module.scss
@@ -52,19 +52,24 @@
                     }
                 }
 
-                button[type="submit"].button {
-                    display: block;
-                    font-size: 1rem;
-                    font-weight: 500;
-                    line-height: 1.5;
-                    padding: var(--givewp-spacing-3) var(--givewp-spacing-5);
-                    width: 100%;
-                    border-radius: 8px;
+                button {
+                    &.button {
+                        &[type="button"],
+                        &[type="submit"] {
+                            display: block;
+                            font-size: 1rem;
+                            font-weight: 500;
+                            line-height: 1.5;
+                            padding: var(--givewp-spacing-3) var(--givewp-spacing-5);
+                            width: 100%;
+                            border-radius: 8px;
 
-                    &.button-secondary {
-                        color: #060c1a;
-                        border-color: #9ca0af;
-                        background-color: white;
+                            &.button-secondary {
+                                color: #060c1a;
+                                border-color: #9ca0af;
+                                background-color: white;
+                            }
+                        }
                     }
                 }
             }
