--- a/src/Promotions/Campaigns/resources/css/styles.scss
+++ b/src/Promotions/Campaigns/resources/css/styles.scss
@@ -1,12 +1,21 @@
 .givewp-campaign-welcome-banner-background {
     position: relative;
     box-sizing: border-box;
-    background: no-repeat bottom right;
     background-size: cover;
-    height: 354px;
     padding: 28px 56px;
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
     border-radius: 8px;
+    overflow: hidden;
+
+    &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-image: linear-gradient(to right, #116239, #278455 32%, var(--givewp-emerald-600));
+        z-index: -1;
+    }
 }
 
 .givewp-campaign-welcome-banner {
