fix: add hover state on link. update badge padding.

--- a/src/Campaigns/resources/admin/components/ExistingUserIntroModal/ExistingUserIntroModal.module.scss
+++ b/src/Campaigns/resources/admin/components/ExistingUserIntroModal/ExistingUserIntroModal.module.scss
@@ -37,7 +37,7 @@
         justify-content: center;
         align-items: center;
         gap: var(--givewp-spacing-1);
-        padding: var(--givewp-spacing-1) var(--givewp-spacing-2);
+        padding: var(--givewp-spacing-1) 0;
         border-radius: 12px;
         font-size: 12px;
         font-weight: bold;
@@ -116,7 +116,7 @@
                 text-decoration: none;
 
                 &:hover {
-                    background-color: var(--givewp-neutral-100);
+                    background-color: var(--givewp-neutral-200);
 
                 }
             }
