refactor: replace preview image

--- a/src/Campaigns/resources/admin/components/ExistingUserIntroModal/ExistingUserIntroModal.module.scss
+++ b/src/Campaigns/resources/admin/components/ExistingUserIntroModal/ExistingUserIntroModal.module.scss
@@ -51,7 +51,7 @@
 
         .previewImage {
             max-height: 347px;
-            width: auto;
+            width: 100%;
             border-radius: 16px 16px 0 0;
         }
     }
