--- a/src/Campaigns/resources/admin/components/CampaignDetailsPage/Components/TextareaControl/styles.scss
+++ b/src/Campaigns/resources/admin/components/CampaignDetailsPage/Components/TextareaControl/styles.scss
@@ -6,6 +6,7 @@
     justify-content: space-between;
 
     &__textarea {
+        border-color: #9ca0af;
         border-radius: 0.25rem;
         color: var(--givewp-neutral-900);
         display: block;
@@ -14,6 +15,16 @@
         line-height: 1.5;
         padding: var(--givewp-spacing-3) var(--givewp-spacing-4);
         width: 100%;
+
+        &:disabled {
+            background-color: #f6f7f7;
+            box-shadow: none;
+            border-color: #9ca0af;
+            cursor: default;
+            opacity: 0.7;
+            text-shadow: 0 1px 0 #fff;
+            transform: none;
+        }
     }
 
     &__help,
