--- a/src/FormBuilder/resources/js/form-builder/src/promos/additionalFields/styles.scss
+++ b/src/FormBuilder/resources/js/form-builder/src/promos/additionalFields/styles.scss
@@ -5,6 +5,12 @@
     margin: 0;
 }
 
+.block-editor-inserter__panel-content-wrapper {
+    border: 1px solid #5BA65E;
+    padding: .5rem;
+    border-radius: 8px;
+}
+
 .block-editor-inserter__panel-content-link {
     display: flex;
     justify-content: center;
