--- a/src/Campaigns/resources/admin/components/CampaignDetailsPage/CampaignDetailsPage.module.scss
+++ b/src/Campaigns/resources/admin/components/CampaignDetailsPage/CampaignDetailsPage.module.scss
@@ -360,12 +360,13 @@ select[name="campaignId"] {
                         box-shadow: rgb(34, 113, 177) 0px 0px 0px 1px;
                     }
 
-                    &:not([type="checkbox"]) {
-                        &:disabled {
+                    &:disabled {
+                        cursor: not-allowed;
+
+                        &:not([type="checkbox"]) {
                             background-color: #f6f7f7;
                             box-shadow: none;
                             border-color: #9ca0af;
-                            cursor: default;
                             opacity: 0.7;
                             text-shadow: 0 1px 0 #fff;
                             transform: none;
