--- a/src/Campaigns/resources/admin/components/CampaignDetailsPage/Components/ColorControl/styles.scss
+++ b/src/Campaigns/resources/admin/components/CampaignDetailsPage/Components/ColorControl/styles.scss
@@ -4,8 +4,6 @@
     gap: var(--givewp-spacing-4);
 
     &.is-disabled {
-        pointer-events: none;
-
         .givewp-color-control__indicator {
             opacity: 0.7;
         }
@@ -15,7 +13,7 @@
             border-color: #dcdcde;
             box-shadow: none;
             color: #a7aaad;
-            cursor: default;
+            cursor: not-allowed;
             text-shadow: none;
         }
     }
