--- a/src/Campaigns/resources/admin/components/CampaignDetailsPage/Components/TextareaControl/styles.scss
+++ b/src/Campaigns/resources/admin/components/CampaignDetailsPage/Components/TextareaControl/styles.scss
@@ -20,7 +20,7 @@
             background-color: #f6f7f7;
             box-shadow: none;
             border-color: #9ca0af;
-            cursor: default;
+            cursor: not-allowed;
             opacity: 0.7;
             text-shadow: 0 1px 0 #fff;
             transform: none;
