Fix: Improve Campaign Page Disabled State Styling (#7813)

--- a/src/Campaigns/resources/admin/components/CampaignDetailsPage/Components/ColorControl/styles.scss
+++ b/src/Campaigns/resources/admin/components/CampaignDetailsPage/Components/ColorControl/styles.scss
@@ -3,6 +3,21 @@
     display: flex;
     gap: var(--givewp-spacing-4);
 
+    &.is-disabled {
+        .givewp-color-control__indicator {
+            opacity: 0.7;
+        }
+
+        button {
+            background: #f6f7f7;
+            border-color: #dcdcde;
+            box-shadow: none;
+            color: #a7aaad;
+            cursor: not-allowed;
+            text-shadow: none;
+        }
+    }
+
     &__indicator {
         align-items: center;
         display: flex;
