--- a/src/Campaigns/resources/admin/components/Inputs/Upload/styles.scss
+++ b/src/Campaigns/resources/admin/components/Inputs/Upload/styles.scss
@@ -2,6 +2,14 @@ div.media-modal.wp-core-ui {
     z-index: 99999999999999;
 }
 
+.givewp-media-library-control-wrapper {
+    &.is-disabled {
+        .givewp-media-library-drop-area {
+            opacity: 0.7;
+        }
+    }
+}
+
 .givewp-media-library-drop-area {
     text-align: center;
     padding: var(--givewp-spacing-8) 0;
@@ -17,6 +25,10 @@ div.media-modal.wp-core-ui {
         border: initial;
         padding: var(--givewp-spacing-1) var(--givewp-spacing-2);
         border-radius: var(--givewp-rounded-4);
+
+        &:disabled {
+            cursor: not-allowed;
+        }
     }
 
     p, svg {
@@ -24,10 +36,7 @@ div.media-modal.wp-core-ui {
     }
 }
 
-
 .givewp-media-library-control {
-    cursor: pointer;
-
     & > button:not(svg + button) {
         min-height: 160px;
 
@@ -37,6 +46,7 @@ div.media-modal.wp-core-ui {
     }
 
     &__reset {
+        cursor: pointer;
         position: relative;
         display: flex;
         background: transparent;
@@ -46,13 +56,20 @@ div.media-modal.wp-core-ui {
         color: var(--givewp-shades-white);
         border: none;
 
-        &:hover {
+        &:hover:not(:disabled) {
             svg {
                 visibility: visible;
                 pointer-events: none;
             }
+
+            img {
+                filter: brightness(80%);
+            }
         }
 
+        &:disabled {
+            cursor: not-allowed;
+        }
     }
 
     svg {
@@ -71,11 +88,6 @@ div.media-modal.wp-core-ui {
         object-position: center;
         transition: filter 0.3s ease;
         border-radius: var(--givewp-rounded-4);
-        cursor: pointer;
-
-        &:hover {
-            filter: brightness(80%); /* Adjust the brightness percentage for the desired tint */
-        }
     }
 
     &__button {
@@ -114,6 +126,13 @@ div.media-modal.wp-core-ui {
             &:hover {
                 background-color: var(--givewp-red-25);
             }
+
+            &:disabled {
+                background-color: var(--givewp-red-50);
+                border-color: currentColor;
+                color: var(--givewp-red-200);
+                cursor: not-allowed;
+            }
         }
 
         &--update {
@@ -122,6 +141,13 @@ div.media-modal.wp-core-ui {
 
             &:hover {
                 background-color: var(--givewp-neutral-50);
+            }
+
+            &:disabled {
+                background-color: var(--givewp-neutral-50);
+                border-color: currentColor;
+                color: var(--givewp-neutral-300);
+                cursor: not-allowed;
             }
         }
     }
