--- a/src/Campaigns/Blocks/CampaignGoal/app/styles.scss
+++ b/src/Campaigns/Blocks/CampaignGoal/app/styles.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+    padding-bottom: 1rem;
 
     &__container {
         display: flex;
