fix: revert auto-height prop in Campaign Settings inputs except checkboxes

--- a/src/Campaigns/resources/admin/components/CampaignDetailsPage/CampaignDetailsPage.module.scss
+++ b/src/Campaigns/resources/admin/components/CampaignDetailsPage/CampaignDetailsPage.module.scss
@@ -353,6 +353,10 @@ select[name="campaignId"] {
                 input, select {
                     padding: var(--givewp-spacing-2) var(--givewp-spacing-4);
 
+                    &:not([type="checkbox"]) {
+                        height: auto;
+                    }
+
                     &:focus {
                         border-color: rgb(34, 113, 177);
                         outline: none;
