refactor: update create page button style and loading state

--- a/src/Campaigns/resources/admin/components/CampaignDetailsPage/CampaignDetailsPage.module.scss
+++ b/src/Campaigns/resources/admin/components/CampaignDetailsPage/CampaignDetailsPage.module.scss
@@ -522,6 +522,7 @@ select[name="campaignId"] {
 :global(#give-admin-campaigns-root) {
 
 
+    .createCampaignPageButton,
     .editCampaignPageButton,
     .updateCampaignButton {
         display: flex;
