refactor: update button style

--- a/src/Campaigns/Blocks/DonateButton/style.scss
+++ b/src/Campaigns/Blocks/DonateButton/style.scss
@@ -1,4 +1,6 @@
-.givewp-campaign-donate-button-block {
+.givewp-campaign-donate-button-block,
+.wp-block-givewp-campaign-donate-button {
+    //TODO: make dynamic
     button {
         width: 100%
     }
