feature: set styles for donate button

--- a/src/Campaigns/Blocks/DonateButton/styles.scss
+++ b/src/Campaigns/Blocks/DonateButton/styles.scss
@@ -1,5 +1,8 @@
 .givewp-campaign-donate-button-block {
     .givewp-donation-form-modal__open {
+        line-height: 1.5;
+        width: 100%;
+        
         &:hover {
             background-color: color-mix(in srgb, var(--givewp-primary-color), black 20%);
         }
