--- a/src/Campaigns/Blocks/CampaignStats/styles.scss
+++ b/src/Campaigns/Blocks/CampaignStats/styles.scss
@@ -3,17 +3,16 @@
     span {
         display: block;
         margin-bottom: 2px;
-        height: 18px;
         font-size: 12px;
         font-weight: 600;
         line-height: 1.5;
         letter-spacing: 0.48px;
         text-align: left;
         color: var(--givewp-neutral-500);
+        text-transform: uppercase;
     }
 
     strong {
-        height: 32px;
         font-size: 20px;
         font-weight: 600;
         line-height: 1.6;
