--- a/src/Campaigns/Blocks/DonateButton/style.scss
+++ b/src/Campaigns/Blocks/DonateButton/style.scss
@@ -2,6 +2,7 @@
 .wp-block-givewp-campaign-donate-button {
     //TODO: make dynamic
     button {
-        width: 100%
+        width: 100%;
+        line-height: 1.5;
     }
 }
