--- a/src/Views/Components/ListTable/ListTable/ListTable.module.scss
+++ b/src/Views/Components/ListTable/ListTable/ListTable.module.scss
@@ -76,7 +76,12 @@
 }
 
 .selectAll {
-    width: 2rem;
+    inline-size: 1rem;
+    padding-right: 0;
+
+    input[type="checkbox"] {
+        transform: translateX(-2px);
+    }
 }
 
 #updateError {
@@ -166,11 +171,7 @@
 }
 
 .id {
-    inline-size: 3.25rem;
-}
-
-.donationForms .levels {
-    inline-size: 8rem;
+    inline-size: 2.5rem;
 }
 
 .donationForms .goal {
