--- a/src/Views/Components/ListTable/ListTablePage/ListTablePage.module.scss
+++ b/src/Views/Components/ListTable/ListTablePage/ListTablePage.module.scss
@@ -256,7 +256,7 @@ ul[role='document'] + .flexRow {
 
 .defaultFormPill {
     position: absolute;
-    bottom: -.8735rem;
+    bottom: -.75rem;
     left: 0;
     background: var(--givewp-neutral-200);
     width: fit-content;
@@ -266,9 +266,10 @@ ul[role='document'] + .flexRow {
     align-items: center;
     gap: 8px;
     margin: 1px 0 26px 16.7px;
-    padding: 2px 16px;
+    padding: 2px 10px;
     border-radius: 12px;
     transition: opacity 150ms ease-in-out, visibility 150ms ease-in-out;
+    font-size: 0.75rem;
 }
 
 .migratedForm {
