--- a/src/Campaigns/Blocks/DonateButton/styles.scss
+++ b/src/Campaigns/Blocks/DonateButton/styles.scss
@@ -1,6 +1,7 @@
 .givewp-campaign-donate-button-block, .wp-block-givewp-campaign-donate-button {
     .givewp-donation-form-modal__open {
         line-height: 1.5;
+        transition: all 0.2s ease;
         width: 100%;
 
         &:hover {
