--- a/src/Views/Components/AdminUI/ModalDialog/style.scss
+++ b/src/Views/Components/AdminUI/ModalDialog/style.scss
@@ -24,7 +24,7 @@
         box-shadow: 0 0.25rem 0.5rem 0 rgba(14, 14, 14, 0.15);
         animation: appear 112ms ease-in 0s;
         color: var(--givewp-grey-700);
-        max-height: 70%;
+        max-height: calc(100% - 2rem);
         overflow-y: auto;
 
         .givewp-modal-header {
