--- a/src/Views/Components/ListTable/ListTablePage/ListTablePage.module.scss
+++ b/src/Views/Components/ListTable/ListTablePage/ListTablePage.module.scss
@@ -167,18 +167,15 @@ ul[role='document'] + .flexRow {
     $depth: 0px 1px 0px rgba(0, 0, 0, 0.25);
 
     background-color: var(--givewp-neutral-100);
-    border: 1px solid #ddd;
-    border-radius: 0.1875rem;
-    box-shadow: $depth;
-    color: #060C1A;
-    font-family: inherit;
+    border-radius: 0.25rem;
+    color: var(--givewp-neutral-900);
+    font-family: 'Inter';
     font-size: 0.875rem;
     font-weight: 500;
     display: flex;
     align-items: center;
     block-size: 2.5rem;
-    padding-inline: 0.8rem;
-    height: 2.25rem;
+    padding: 0.5rem 1rem;
     transition-property: filter, color, outline;
     transition-duration: 180ms;
     transition-timing-function: ease-in;
@@ -192,6 +189,7 @@ ul[role='document'] + .flexRow {
 
     &:is(:hover, :active, :focus) {
         background-color: var(--givewp-neutral-200);
+        color: var(--givewp-neutral-900);
     }
 
     &:active {
@@ -200,7 +198,7 @@ ul[role='document'] + .flexRow {
 
     &:focus {
         box-shadow: $depth;
-        outline: 0.125rem solid var(--give-primary-color);
+        outline: 0.125rem solid #2271B1;
         outline-offset: 0.25em;
     }
 }
