--- a/src/Campaigns/resources/admin/components/Inputs/Upload/styles.scss
+++ b/src/Campaigns/resources/admin/components/Inputs/Upload/styles.scss
@@ -41,7 +41,7 @@ div.media-modal.wp-core-ui {
         min-height: 160px;
 
         & > img {
-            height: 100%;
+            aspect-ratio: 4 / 1;
         }
     }
 
@@ -50,7 +50,6 @@ div.media-modal.wp-core-ui {
         position: relative;
         display: flex;
         background: transparent;
-        height: 5rem;
         width: 100%;
         padding: 0;
         color: var(--givewp-shades-white);
@@ -83,7 +82,6 @@ div.media-modal.wp-core-ui {
 
     &__image {
         width: 100%;
-        height: 5rem;
         object-fit: cover;
         object-position: center;
         transition: filter 0.3s ease;
