--- a/src/Views/Components/ListTable/ListTablePage/ListTablePage.module.scss
+++ b/src/Views/Components/ListTable/ListTablePage/ListTablePage.module.scss
@@ -252,17 +252,35 @@ ul[role='document'] + .flexRow {
     transform: translate(-50%, 0);
 }
 
+.defaultFormPill {
+    position: absolute;
+    bottom: -.75rem;
+    left: 0;
+    background: var(--givewp-neutral-200);
+    width: fit-content;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    margin: 1px 0 26px 16.7px;
+    padding: 2px 10px;
+    border-radius: 12px;
+    transition: opacity 150ms ease-in-out, visibility 150ms ease-in-out;
+    font-size: 0.75rem;
+}
+
 .migratedForm {
     display: flex;
     align-items: center;
 
     .tooltipContainer {
-        position: relative;
+        position: absolute;
+        left: -.55rem;
         display: flex;
         align-items: center;
 
         svg {
-            margin-right: 5px;
             fill: #3A21D9;
         }
     }
@@ -397,7 +415,8 @@ ul[role='document'] + .flexRow {
     padding: var(--givewp-spacing-4) var(--givewp-spacing-6);
     border-top-left-radius: var(--givewp-rounded-8);
     border-top-right-radius: var(--givewp-rounded-8);
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);}
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+}
 
 .dialog {
     margin: auto;
