--- a/src/DonationForms/Blocks/DonationFormBlock/resources/common/FormModal/styles.scss
+++ b/src/DonationForms/Blocks/DonationFormBlock/resources/common/FormModal/styles.scss
@@ -15,7 +15,7 @@
         flex-direction: column;
         align-items: center;
         position: relative;
-        margin: auto;
+        margin: 0 auto;
         max-height: 85%;
         width: 100%;
         padding-right: 3rem;
@@ -29,7 +29,8 @@
         &__content {
             width: 100%;
             height: 100%;
-            transition: opacity 0.3s ease-in;
+            transition: opacity 0.6s ease-in;
+            z-index: 100;
         }
     }
 
@@ -68,5 +69,14 @@
         border-radius: 8px;
         transition: opacity 0.12s ease-out;
         z-index: 100;
+    }
+}
+
+// Account for admin bar
+.admin-bar {
+    .givewp-donation-form-modal {
+        &__close {
+            top: calc(32px + 25px);
+        }
     }
 }
