--- a/src/DonationForms/Blocks/DonationFormBlock/resources/common/FormModal/styles.scss
+++ b/src/DonationForms/Blocks/DonationFormBlock/resources/common/FormModal/styles.scss
@@ -6,7 +6,7 @@
         height: 100%;
         width: 100%;
         display: flex;
-        background-color: rgba(0, 0, 0, 0.35);
+        background-color: rgba(0, 0, 0, 0.70);
         z-index: 100;
     }
 
@@ -15,7 +15,7 @@
         flex-direction: column;
         align-items: center;
         position: relative;
-        margin: auto;
+        margin: 0 auto;
         max-height: 85%;
         width: 100%;
         padding-right: 3rem;
@@ -29,15 +29,16 @@
         &__content {
             width: 100%;
             height: 100%;
-            transition: opacity 0.3s ease-in;
+            transition: opacity 0.6s ease-in;
+            z-index: 100;
         }
     }
 
     &__close {
         display: flex;
-        position: absolute;
-        top: .25rem;
-        right: 50%;
+        position: fixed;
+        top: 25px;
+        right: 25px;
         padding: .75rem;
         width: fit-content;
         background: #fff;
@@ -68,5 +69,14 @@
         border-radius: 8px;
         transition: opacity 0.12s ease-out;
         z-index: 100;
+    }
+}
+
+// Account for admin bar
+.admin-bar {
+    .givewp-donation-form-modal {
+        &__close {
+            top: calc(32px + 25px);
+        }
     }
 }
