fix: admin bar css

--- a/src/DonationForms/Blocks/DonationFormBlock/resources/app/Components/ModalForm/styles.scss
+++ b/src/DonationForms/Blocks/DonationFormBlock/resources/app/Components/ModalForm/styles.scss
@@ -84,6 +84,7 @@
 // Account for admin bar
 .admin-bar {
     .givewp-donation-form-modal {
+        margin-top: 32px;
         &__close {
             top: calc(32px + 25px);
         }
