--- a/src/DonationForms/Blocks/DonationFormBlock/resources/app/Components/ModalForm/styles.scss
+++ b/src/DonationForms/Blocks/DonationFormBlock/resources/app/Components/ModalForm/styles.scss
@@ -55,6 +55,19 @@
         }
     }
 
+    &__open__spinner {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 100;
+        line-height: 1;
+    }
+
+    &__open {
+        position: relative;
+    }
+
     &__close {
         display: flex;
         position: fixed;
