refactor: using display none is smoother for some reason

--- a/src/DonationForms/Blocks/DonationFormBlock/resources/app/Components/ModalForm/styles.scss
+++ b/src/DonationForms/Blocks/DonationFormBlock/resources/app/Components/ModalForm/styles.scss
@@ -42,8 +42,7 @@
         z-index: 100;
 
         &[data-loading="true"] {
-            visibility: hidden;
-            z-index: -1;
+            display: none;
         }
 
         &[data-entering="true"] {
