fix: remove border on add campaign form button

--- a/src/Views/Components/ListTable/ListTablePage/ListTablePage.module.scss
+++ b/src/Views/Components/ListTable/ListTablePage/ListTablePage.module.scss
@@ -168,6 +168,7 @@ ul[role='document'] + .flexRow {
 
     background-color: var(--givewp-neutral-100);
     border-radius: 0.25rem;
+    border: none;
     color: var(--givewp-neutral-900);
     font-family: 'Inter';
     font-size: 0.875rem;
