--- a/src/Campaigns/Blocks/CampaignForm/resources/styles.scss
+++ b/src/Campaigns/Blocks/CampaignForm/resources/styles.scss
@@ -11,6 +11,7 @@
     text-decoration: none !important;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue',
     sans-serif;
+    width: 100%;
 }
 
 .components-input-control__label {
