refactor: remove styles

--- a/src/Campaigns/Blocks/CampaignForm/resources/styles.scss
+++ b/src/Campaigns/Blocks/CampaignForm/resources/styles.scss
@@ -21,6 +21,14 @@
 .wp-block-givewp-campaign-form {
     position: relative;
 
+    .iframe-loader {
+        display: none;
+    }
+
+    .close-btn.js-give-embed-form-modal-closer{
+        display: none;
+    }
+
     form[id*='give-form'] #give-gateway-radio-list > li input[type='radio'] {
         display: inline-block;
     }
