--- a/assets/src/css/frontend/embed-form.scss
+++ b/assets/src/css/frontend/embed-form.scss
@@ -2,108 +2,135 @@
 Embed Form aka IFrame Form
 -----------------------------------*/
 .give-embed-form-wrapper {
-	width: 100% !important;
-	position: relative;
+    width: 100% !important;
+    position: relative;
+    top: 0;
+    left: 0;
+    right: 0;
+    background: none;
 
-	.iframe-loader {
-		height: 100%;
-		width: 100%;
-		position: absolute;
-		top: 0;
-		pointer-events: none;
-	}
+    .iframe-loader {
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        top: 0;
+        pointer-events: none;
+    }
 
-	iframe {
-		width: 100% !important;
-	}
+    iframe {
+        width: 100% !important;
+    }
 
-	&.is-hide {
-		position: fixed;
-		left: -9999px;
-	}
+    &.is-hide {
+        position: fixed;
+        left: -9999px;
+    }
 
-	&.modal {
-		position: fixed;
-		z-index: 999999;
-		top: 0;
-		left: 0;
-		width: 100% !important;
-		height: 100% !important;
-		max-width: none !important;
-		padding: 0 !important;
-		margin: 0 !important;
-		overflow: hidden auto;
+    &.modal {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        min-height: 100vh;
+        height: var(--visual-viewport-height);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        z-index: 100;
 
-		.modal-inner-wrap {
-			position: absolute;
-			top: 0;
-			width: 100%;
-			z-index: 1;
-		}
+        &[data-loading="true"] {
+            display: none;
+        }
 
-		.modal-content {
-			position: relative;
-			margin: 35px auto auto;
-			max-width: 572px;
-			width: 100%;
-		}
+        &[data-entering="true"] {
+            animation: modal-fade 300ms;
+        }
 
-		.close-btn-wrap {
-			margin-top: 15px;
-		}
+        &[data-exiting="true"] {
+            animation: modal-fade 150ms reverse ease-in;
+        }
 
-		.close-btn {
-			background: black;
-			color: white !important;
-			border-radius: 24px;
-			text-decoration: none;
-			outline: none;
-			font-size: 0.5em;
-			position: absolute;
-			right: 9px;
-			top: -14px;
-			font-weight: bold;
-			padding: 2px 10px;
-			opacity: 0.3;
+        .modal-inner-wrap {
+            position: relative;
+            top: 0;
+            left: 0;
+            min-width: 100vw;
+            height: 100vh;
+            z-index: 1;
+        }
 
-			&:hover {
-				opacity: 0.8;
-			}
+        .modal-content {
+            position: relative;
+            max-width: 572px;
+            width: 100%;
+            z-index: 999;
+        }
 
-			span {
-				margin-left: 3px;
-				font-size: 1.5em;
-				line-height: 0.7em;
-			}
-		}
+        .close-btn {
+            display: flex;
+            position: fixed;
+            top: 125px;
+            right: 25px;
+            padding: .75rem;
+            background: #e7e8ed;
+            cursor: pointer;
+            border: 1px solid transparent;
+            border-radius: 50%;
+            z-index: 999;
+            transition: 0.2s;
 
-		&::after {
-			content: '';
-			display: block;
-			position: fixed;
-			top: 0;
-			left: 0;
-			bottom: 0;
-			right: 0;
-			background-color: rgba(0, 0, 0, 0.8);
-			overflow: hidden;
-		}
-	}
+            svg {
+                height: 1rem;
+                width: 1rem;
+            }
+
+            &:hover, &:focus, &:active {
+                border: 1px solid darken(#e7e8ed, 10%);
+                background-color: darken(#e7e8ed, 10%);
+            }
+        }
+
+        &::after {
+            content: '';
+            display: block;
+            position: fixed;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            background: rgba(0 0 0 / .7);
+            overflow: hidden;
+        }
+    }
 }
 
 @keyframes spin {
-	from {
-		transform: rotateZ(0deg);
-	}
+    from {
+        transform: rotateZ(0deg);
+    }
 
-	to {
-		transform: rotateZ(359deg);
-	}
+    to {
+        transform: rotateZ(359deg);
+    }
 }
 
 /*---------------------------------
 Embed Form aka IFrame Form
 -----------------------------------*/
 .js-give-grid-modal-launcher + div.js-give-embed-form-modal-launcher-wrap {
-	display: none;
+    display: none;
 }
+
+
+.admin-bar {
+    .give-embed-form-wrapper {
+        margin-top: -26px;
+        background: none;
+
+        .close-btn {
+            top: 70px;
+        }
+    }
+}
+
