--- a/src/Campaigns/resources/admin/components/CampaignDetailsPage/CampaignDetailsPage.module.scss
+++ b/src/Campaigns/resources/admin/components/CampaignDetailsPage/CampaignDetailsPage.module.scss
@@ -6,6 +6,12 @@
 :global {
     :root {
         --give-primary-color: #69b868;
+        --givewp-admin-bar-height: var(--givewp-spacing-8);
+        --header-height: 97px;
+
+        @media (max-width: 782px){
+            --givewp-admin-bar-height: 46px;
+        }
     }
 
     .post-type-give_forms #wpbody {
@@ -127,6 +133,17 @@
 
 select[name="campaignId"] {
     display: none;
+}
+
+.pageHeader,
+.tabMenu{
+    position: sticky;
+    top: var(--givewp-admin-bar-height);
+    z-index: 2;
+}
+
+.tabMenu{
+    top: calc(var(--givewp-admin-bar-height) + var(--header-height));
 }
 
 .tabs {
