--- a/src/DonationForms/resources/registrars/templates/styles.module.scss
+++ b/src/DonationForms/resources/registrars/templates/styles.module.scss
@@ -142,6 +142,9 @@
         }
 
         &__reset-button {
+            background: none;
+            border: none;
+            width: fit-content;
             color: var(--givewp-grey-500);
             cursor: pointer;
             font-size: 14px;
