--- a/src/DonationForms/resources/styles/elements/_multi-step-form.scss
+++ b/src/DonationForms/resources/styles/elements/_multi-step-form.scss
@@ -43,6 +43,9 @@
         }
 
         &-header-title-text {
+            font-size: 1rem;
+            line-height: 24px;
+            margin: 0;
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
