fix: enable focus outline on multistep progress buttons

--- a/src/DonationForms/resources/styles/elements/_multi-step-form.scss
+++ b/src/DonationForms/resources/styles/elements/_multi-step-form.scss
@@ -64,7 +64,7 @@
             cursor: pointer;
 
             &:focus {
-                box-shadow: none;
+                box-shadow: inset 0 0 0 2px var(--givewp-primary-color);
             }
         }
 
