refactor: add focus to all auth buttons. remove row-reverse.

--- a/src/DonationForms/resources/registrars/templates/styles.module.scss
+++ b/src/DonationForms/resources/registrars/templates/styles.module.scss
@@ -102,6 +102,11 @@
         margin: 0;
         padding: 0;
         width: auto;
+
+        &:focus {
+            border-color: transparent;
+            box-shadow: 0 0 0 0.125rem var(--givewp-primary-color);
+        }
     }
 
     &__login-form {
@@ -117,7 +122,6 @@
 
         &__buttons-wrapper {
             display: flex;
-            flex-direction: row-reverse;
             gap: 15px;
             justify-content: space-between;
             align-items: baseline;
@@ -139,6 +143,11 @@
                     background-color: color-mix(in lab, var(--givewp-primary-color) 90%, black);
                 }
             }
+
+            &:focus {
+                border-color: transparent;
+                box-shadow: 0 0 0 0.125rem var(--givewp-primary-color);
+            }
         }
 
         &__reset-button {
@@ -153,6 +162,11 @@
             span {
                 color: var(--primary);
                 font-weight: 500;
+            }
+
+            &:focus {
+                border-color: transparent;
+                box-shadow: 0 0 0 0.125rem var(--givewp-primary-color);
             }
         }
     }
