--- a/src/DonationForms/resources/registrars/templates/fields/Date/styles.module.scss
+++ b/src/DonationForms/resources/registrars/templates/fields/Date/styles.module.scss
@@ -4,15 +4,6 @@
     gap: var(--givewp-spacing-1);
     position: relative;
 
-    :global {
-        .react-aria-Label {
-            color: var(--givewp-grey-700);
-            font-size: var(--givewp-font-size-paragraph-lg);
-            font-weight: 500;
-            line-height: 1.5;
-        }
-    }
-
     &[data-focus-within="true"] {
         .dateInputContainer {
             box-shadow: 0 0 0 var(--outline-width) var(--form-element-focus-color);
@@ -74,117 +65,121 @@
                 padding: 0 0.25rem;
 
                 &[data-focused="true"] {
-                    background-color: var(--givewp-primary-color);
-                    color: var(--givewp-shades-white);
+                    outline-color: var(--givewp-primary-color);
                 }
             }
         }
     }
 
-    @at-root {
-        :global {
-            .react-aria-Popover[data-trigger=DatePicker] {
-                max-width: unset;
-            }
+    :global {
+        .react-aria-Label {
+            color: var(--givewp-grey-700);
+            font-size: var(--givewp-font-size-paragraph-lg);
+            font-weight: 500;
+            line-height: 1.5;
+        }
 
-            .react-aria-Popover {
-                left: 0 !important;
-                top: 100% !important;
-                transform: translateY(8px);
-                transition: transform .2s,opacity .2s;
-            }
+        .react-aria-Popover[data-trigger=DatePicker] {
+            max-width: unset;
+        }
 
-            .react-aria-Dialog {
-                background-color: var(--givewp-grey-5);
-                border-radius: 0.25rem;
-                border: 0.078rem solid var(--givewp-grey-400);
-                margin: 0;
-                padding: 1rem;
-            }
+        .react-aria-Popover {
+            left: 0 !important;
+            top: 100% !important;
+            transform: translateY(8px);
+            transition: transform .2s,opacity .2s;
+        }
 
-            .react-aria-Calendar {
-                header {
+        .react-aria-Dialog {
+            background-color: var(--givewp-grey-5);
+            border-radius: 0.25rem;
+            border: 0.078rem solid var(--givewp-grey-400);
+            margin: 0;
+            padding: 1rem;
+        }
+
+        .react-aria-Calendar {
+            header {
+                align-items: center;
+                display: flex;
+                gap: 0.25rem;
+                justify-content: space-between;
+                padding-bottom: 1rem;
+
+                h2 {
+                    font-size: 1.25rem;
+                    font-weight: 600;
+                    line-height: 1.4;
+                    margin: 0 2rem;
+                    text-align: center;
+                }
+
+                button {
                     align-items: center;
+                    background-color: transparent;
+                    border: 0;
+                    color: var(--givewp-grey-700);
                     display: flex;
-                    gap: 0.25rem;
-                    justify-content: space-between;
-                    padding-bottom: 1rem;
+                    font-size: 0.875rem;
+                    height: 2rem;
+                    justify-content: center;
+                    margin: 0;
+                    padding: 0.25rem;
+                    width: 2rem;
 
-                    h2 {
-                        font-size: 1.25rem;
-                        font-weight: 600;
-                        line-height: 1.4;
-                        margin: 0 2rem;
-                        text-align: center;
+                    &:hover {
+                        background-color: var(--givewp-grey-50);
                     }
+                }
+            }
 
-                    button {
+            table {
+                margin: 0;
+
+                tr {
+                    background-color: transparent;
+                }
+
+                th,
+                td {
+                    border: 0;
+                    font-weight: 600;
+                    padding: 0;
+                    text-align: center;
+                }
+
+                th {
+                    color: var(--givewp-grey-500);
+                    font-size: 0.75rem;
+                    padding-bottom: 0.5rem;
+                }
+
+                td {
+                    [role="button"] {
                         align-items: center;
                         background-color: transparent;
                         border: 0;
-                        color: var(--givewp-grey-700);
+                        color: var(--givewp-shades-black);
                         display: flex;
                         font-size: 0.875rem;
-                        height: 2rem;
+                        height: 2.25rem;
                         justify-content: center;
-                        margin: 0;
-                        padding: 0.25rem;
-                        width: 2rem;
+                        margin: 1px;
+                        padding: 0;
+                        width: 2.25rem;
 
                         &:hover {
-                            background-color: var(--givewp-grey-50);
+                            background-color: var(--givewp-grey-100);
                         }
-                    }
-                }
 
-                table {
-                    margin: 0;
+                        &[data-disabled="true"] {
+                            color: var(--givewp-grey-300);
+                            pointer-events: none;
+                        }
 
-                    tr {
-                        background-color: transparent;
-                    }
-
-                    th,
-                    td {
-                        border: 0;
-                        font-weight: 600;
-                        padding: 0;
-                        text-align: center;
-                    }
-
-                    th {
-                        color: var(--givewp-grey-500);
-                        font-size: 0.75rem;
-                        padding-bottom: 0.5rem;
-                    }
-
-                    td {
-                        [role="button"] {
-                            align-items: center;
-                            background-color: transparent;
-                            border: 0;
-                            color: var(--givewp-shades-black);
-                            display: flex;
-                            font-size: 0.875rem;
-                            height: 2.25rem;
-                            justify-content: center;
-                            margin: 1px;
-                            padding: 0;
-                            width: 2.25rem;
-
-                            &:hover {
-                                background-color: var(--givewp-grey-100);
-                            }
-
-                            &[data-disabled="true"] {
-                                color: var(--givewp-grey-300);
-                                pointer-events: none;
-                            }
-
-                            &[data-selected="true"] {
-                                background-color: var(--givewp-primary-color);
-                                color: var(--givewp-shades-white);
-                            }
+                        &[data-selected="true"] {
+                            background-color: var(--givewp-primary-color);
+                            color: var(--givewp-shades-white);
                         }
                     }
                 }
